--- a/templates/about.html
+++ b/templates/about.html
@@ -2,3 +2,5 @@
 
 <p>Hey my name is Deonte and I created this webpage through the django training course</p>
 <a href="{% url 'home' %}">Return Home</a>
+
+Copyright 2022
